--- a/web-admin-client/package.json
+++ b/web-admin-client/package.json
@@ -21,6 +21,7 @@
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
