--- a/web-admin-client/package.json
+++ b/web-admin-client/package.json
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-modal": "^3.16.3"
+    "@types/react-modal": "^3.16.3",
+    "@types/react-select": "^5.0.0"
   }
 }
