--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.10.0",
     "pdfkit": "^0.16.0",
+    "puppeteer": "^24.6.1",
     "sqlite3": "^5.1.7"
   }
 }
