--- a/web-admin-client/package.json
+++ b/web-admin-client/package.json
@@ -14,7 +14,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.13",
     "@types/react-dom": "^19.0.5",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
