--- a/web-admin-client/package.json
+++ b/web-admin-client/package.json
@@ -15,6 +15,8 @@
     "@types/react": "^19.0.13",
     "@types/react-dom": "^19.0.5",
     "axios": "^1.9.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
